# hatefeed

./: LICENSE.md  README.md
daemon/: .gitignore  Cargo.toml  Dockerfile  deploy.sh  go.mod  go.sum  main.go
daemon/client/: client_command.go  communication.go  protocol.go
daemon/feed/: fanout.go  feed.go  hatestack.go
daemon/profile/: bsky_getprofile.go  profile_cache.go
daemon/sentiment/: sentiment.go  sentiment_test.go
daemon/src/: client.rs  hatestack.rs  main.rs
daemon/src/jetstream/: jetstream.rs  mod.rs  model.rs
lib/: feed.dart  main.dart  processed_post.dart
linux/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
ui/: README.md  deploy.sh  firebase.json  pubspec.yaml
ui/android/app/: build.gradle  google-services.json
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: about_screen.dart  analytics_helpers.dart  appearance_preferences_model.dart  feed.dart  firebase_options.dart  keyboard_dismissible.dart  main.dart  processed_post.dart  swipeable_screen.dart  widget_connection_state.dart  widget_feed_mode_switcher.dart  widget_float_up_animation.dart  widget_post_card.dart  widget_settings_modal.dart  widget_theme_switcher.dart
ui/lib/post_card/: header.dart  widget_post_card.dart
ui/linux/: CMakeLists.txt
ui/macos/Flutter/: GeneratedPluginRegistrant.swift
ui/test/: processed_post_test.dart  widget_post_card_test.dart  widget_test.dart
ui/web/: index.html  manifest.json
ui/windows/runner/: Runner.rc  main.cpp
web/: manifest.json
windows/: CMakeLists.txt
(+4 files in other folders)
